# BookAndMint

./: README.md
contract/: Anchor.toml  package-lock.json  package.json
contract/programs/contract/: Cargo.toml
contract/programs/contract/src/: build_metadata.rs  lib.rs  nft_metadata.rs
contract/tests/: contract.ts
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.jsx  App.tsx  index.css  main.jsx
frontend/src/components/: AddSlot.tsx  AllExperiences.tsx  BookSlot.tsx  ExperienceDetails.tsx  ExperienceLoader.tsx  Footer.jsx  Navbar.jsx  createExperience.tsx
frontend/src/hooks/: get-programs.ts  user-experiences.ts  user-profile.ts
frontend/src/idl/: contract.json  contract.ts
frontend/src/lib/: SolanaClient.ts  utils.ts
frontend/src/pages/: ExperiencePage.tsx  Landing.jsx  UserProfile.tsx
