[package]
name = "contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-spl/idl-build", "anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version = "0.31.1",features = ["init-if-needed"]}
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
mpl-token-metadata = "5.1.0"
serde_json = "1.0.140"
url = "2.5.4"

